Flowlayout working with margins. Page show delayed by 200 milliseconds to reduce flicker and correctly arrange flowLayout. Fixes to height calculation for controls with floating children (where height is otherwise zero).

--- a/WebContent/styles/properties.css
+++ b/WebContent/styles/properties.css
@@ -21,6 +21,7 @@ table.propertiesPanelTable  {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	width: 50%;
+	max-width: 50px;
 }
 
 .propertiesPanelTable input {
